   * wesnoth.dofile now forwards any excess arguments to the file in the "..." argument
   * wesnoth.require can now load all modules in a directory and accepts some shortened paths,
     for example omitting the ".lua" file extension.
   * New wesnoth.create_weapon function to make a weapon that's not attached to a unit
     (which could be useful for animations)
 * Multiplayer:
   * Fixed statistics being lost when reloading an MP game.
 * Performance:
   * Greatly speeded up switching between add-ons in the add-on manager
     (bug #25523)
 * User Interface:
   * Updated Attack Predictions dialog to GUI2.
   * Updated Story screen to GUI2.
   * Double-clicking an add-on now installs, updates, uninstalls or publishes it
     depending on the situation.
   * Fixed file path being truncated on the wrong side in the File Browser.
   * Improved Hotkey category sorting interface in Preferences.
   * Improved Addon Manager and MP Staging interfaces at low resolutions.
   * Fixed bug that allows you to use the minimap to bypass view locking
   * You can now change the theme (in preferences) while a game is in progress.
   * Fixed units moving after in game help exit. (#24644)
   * Fixed a bug that caused rapid announce messages to overlap eachother. (bug #21634)
   * Fix buttons disappearing while menus are open.
   * Fix map labels disappearing when a dialog is open.
   * Improve tooltip placement.
   * Move recruit/recall to top of context menu
   * Add a hotkey to launch test scenarios from the titlescreen
 * WML Engine:
   * Add base_income key to [store_side]
   * Fix issues with alpha animations on hidden units (#14503)
   * Extensions to GUI2 Canvas ([drawing] tag in dialogs):
     * New [round_rectangle] shape - a rectangle plus corner_radius
     * [circle] shape can now be drawn filled; color key is now border_color
     * [image] has new resize_mode=tile_center
     * Canvas colors can now be expressed as formulas. The formula must return